dodav evristik givna

--- a/index.html
+++ b/index.html
@@ -3,39 +3,39 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="outlines.css">
-    <title>Портфолио Junior верстальщика</title>
+    <title>CASES CS:GO FREE KNIFES</title>
   </head>
 
   <body>
     <header class="page-header">
-      Контакты в шапке
+      contacts: govno228@hui.ua
     </header>
 
     <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот</h1>
-      <p>Junior верстальщик</p>
+      <h1 class="heading">maximka</h1>
+      <p>maximka</p>
     </section>
 
     <section class="intro">
-      <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <h2 class="subheading">hi</h2>
+      <h3>hi hi hi </h3>
+      <p>hi hi hi hi hi hi hi hi hi </p>
+      <h3>hi hi hi hi hi hi hi </h3>
+      <p>evrustuka givna</p>
     </section>
 
     <section class="portfolio">
-      <h2 class="subheading">Мои работы</h2>
+      <h2 class="subheading">giv me jop</h2>
 
-      <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
+      <h3>cal</h3>
+      <p>ccal</p>
 
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+      <h3>govno</h3>
+      <p>siski</p>
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
+      piski
     </footer>
   </body>
 </html>
